fix(richtext-lexical): link color too dark in dark mode

--- a/packages/richtext-lexical/src/lexical/theme/EditorTheme.scss
+++ b/packages/richtext-lexical/src/lexical/theme/EditorTheme.scss
@@ -339,7 +339,7 @@ html[data-theme='dark'] {
     }
 
     &__link {
-      color: var(--color-blue-600);
+      color: var(--color-blue-400);
     }
 
     &__quote {
